# FamTree

./: .gitignore  CMakeLists.txt  FamTree.cpp  FamTree.h  README.md
app/: addEditWindow.cpp  addEditWindow.ui  main.cpp  mainwindow.cpp  mainwindow.ui
apps/: CMakeLists.txt  FamTree.cpp  FamTreeCmd.cpp
include/: person.hpp  relation.hpp
include/fam_tree/: CMakeLists.txt  gender.hpp  person.hpp  relation.hpp  utils.hpp
include/view/: FamTreeGui.hpp  addEditWindow.h  mainwindow.h
src/: CMakeLists.txt  person.cpp  utils.cpp
tests/: CMakeLists.txt  deserializeFromFileTest.txt  person_test.cpp  serializeToFileTest.txt  utils_test.cpp  writeToFile.txt
